--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -15,11 +15,14 @@
   .card-title {
     font-size: 16px;
     font-weight: bold;
+    color: #0074d9;
   }
   
   .card-price {
     font-size: 14px;
-    color: #0074d9;
+    font-weight: bold;
+    color: black;
+  text-align: right;
   }
   
   .card-description {
@@ -30,5 +33,26 @@
   .card-category{
     font-size: 12px; /* Adjust font size as needed */
     color: #555; /* Set a color for the category */
+    text-align: left;
+
+  }
+  .card-rating{
+    font-size: 12px; /* Adjust font size as needed */
+    color: #6f7d8d; /* Set a color for the category */
+    text-align: left;
+
   }
   
+  p mark {
+    background-color: yellow;
+    color: #555;
+    
+  }
+  .btnn{
+   float: left;
+   border: 1px solid #ccc;
+   border-radius: 5px;
+   background-color: #0074d9;
+   color: #fff;
+   cursor: pointer;
+  }
